--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <!-- Movie results will be displayed here -->
     </div>
   </div>
+  
+  <div class="hello"></div>
 
   <script src="script.js"></script>
 </body>
